# OpenMythos

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  PAI_REVIEW_2026-04.md  README.md  __init__.py  eval.py  eval_inference.py  example.py  example_deepseek.py  example_mlx.py  launcher.py  mcp_server.py  mesh_guide.md  moe_scaler.py  mythos.py  pr_body.md  prepare_data.py  pyproject.toml  requirements.txt  serve.py  setup.py  start_openmythos.sh  test_config.py  test_enhancements.py  test_hf.py  test_main.py  train.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  tests.yml
benchmarks/: benchmark_config.py  run_benchmarks.py
docs/: API.md  executive_report.html  rag_anything_enhancement_proposal.md  technical_report.html
docs/benchmarks/: benchmarks.ipynb  benchmarks.md
docs/superpowers/plans/: 2026-04-27-stochastic-depth-training.md
docs/superpowers/specs/: 2026-04-27-stochastic-depth-training-design.md
engine/: __init__.py  mlx_engine.py
examples/: README.md  config_enhanced.yaml  context_example.py  enhanced_search_example.py  evolution_example.py  memory_example.py  moda_example.py  search_example.py  tools_example.py  variants_example.py
experiments/: README.md  config.py  data.py  evaluate.py  plot_results.py  run_all.sh  train.py
open_mythos/: __init__.py  bench.py  config.py  enhanced_hermes.py  full_model.py  launcher.py  main.py  mcp_server.py  router.py  tokenizer.py  training.py  variants.py
open_mythos/cli/: __init__.py  agent_loop.py  formatter.py  main.py  provider.py
open_mythos/config/: __init__.py  contracts.py  lineage.py  loader.py  metadata_driven.py  routing.py  schema.py  self_monitor.py
open_mythos/context/: context_engine.py
open_mythos/evolution/: __init__.py  auto_evolution.py  evolution_core.py
open_mythos/experimental/: __init__.py  moda.py
open_mythos/integration/: __init__.py  mythos_integration.py
open_mythos/persistence/: __init__.py  json_store.py  sqlite_store.py
open_mythos/rag/: __init__.py  content_router.py  hybrid_retrieval.py  joint_selector.py  kg_storage.py  knowledge_graph.py  m_flow_bundle.py  multimodal_parser.py  rag_losses.py  rag_recurrent_block.py
open_mythos/rag/retrieval/: __init__.py  bm25.py  config.py  cross_encoder_reranker.py  embedding_models.py  example.py  hybrid_retriever.py  hyde.py  test_retrieval.py  vector_retriever.py
open_mythos/rag/training/: train_rag.py
open_mythos/search/: __init__.py  hybrid_search.py  query_expander.py  reranker.py
open_mythos/search/enhanced/: __init__.py  importance_scorer.py  semantic_chunking.py  tag_system.py
open_mythos/tests/: run_tests.py  test_cli.py  test_context.py  test_evolution.py  test_integration.py  test_memory.py  test_p4_integration.py  test_tools.py
open_mythos/tools/: __init__.py  execution.py  registry.py
open_mythos/tools/builtins/: __init__.py  datetime_tools.py  file_tools.py  json_tools.py  math_tools.py  web_tools.py
open_mythos/tools/mcp/: __init__.py  client.py
open_mythos/web/: dashboard.py
scripts/: check_mcp.sh
serving/: openai_server.py
shell/: mythos_completion.bash  mythos_completion.fish
tests/: test_act_fsdp_fix.py  test_code_review_fixes.py  test_components.py  test_config_validation.py  test_main.py  test_minimax_m2.py  test_moda.py  test_moe_before_after.py  test_moe_router.py  test_pai_regressions.py  test_stochastic_depth.py  test_tokenizer.py  test_variants.py
training/: 1b_fine_web_edu.py  3b_fine_web_edu.py  3b_fine_web_edu_p0_curriculum.py  benchmark.py  enhanced.py  export_hf.py  requirements.txt  train_p0_p3.py
