[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "open-mythos"
version = "0.4.0"
description = "OpenMythos — open-source theoretical reconstruction of the Claude Mythos Recurrent-Depth Transformer architecture"
license = "MIT"
authors = ["Kye Gomez <kye@swarms.world>"]
homepage = "https://github.com/The-Swarm-Corporation/OpenMythos"
documentation = "https://github.com/The-Swarm-Corporation/OpenMythos/blob/main/docs/open_mythos.md"
readme = "README.md"
repository = "https://github.com/The-Swarm-Corporation/OpenMythos"
keywords = [
    "artificial intelligence",
    "deep learning",
    "transformers",
    "recurrent transformers",
    "looped transformers",
    "mixture of experts",
    "multi-latent attention",
    "grouped query attention",
    "adaptive computation time",
    "recurrent depth transformer",
    "LTI stability",
    "inference-time scaling",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
# Library constraints. torch 2.3 is the floor for the FSDP APIs we use
# (ShardedGradScaler in torch.distributed.fsdp.sharded_grad_scaler,
# torch.amp.autocast with device_type=, full_state_dict rank0_only=).
# Pretraining runs should pin exact versions via training/requirements.txt.
torch = ">=2.3.0,<3.0.0"
transformers = ">=4.40.0,<5.0.0"
datasets = ">=2.18.0,<4.0.0"


[tool.poetry.group.training.dependencies]
# Only required for the pretraining scripts in training/, not for using
# the library for inference / architecture research.
numpy = ">=1.26,<3.0"
loguru = ">=0.7.3,<1.0.0"


[tool.poetry.group.lint.dependencies]
black = ">=23.1,<27.0"
ruff = ">=0.5.1,<0.15.9"


[tool.poetry.group.test.dependencies]
pytest = ">=8.1.1,<10.0.0"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
pytest = "*"

[tool.ruff]
line-length = 88

[tool.black]
target-version = ["py310"]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''
